--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <div class="container">
     <div class="heading text-center"> 
       <h2>Our Team</h2>
-      <p>This is the people who made this web(html).</p>
+      <p>The Developers Behind Everything</p>
     </div>
     <!-- Team Member's Details -->
     <div class="team-content">
@@ -166,7 +166,7 @@
             <!-- Image Hover Block -->
             <div class="member-img"> 
               <!-- Image  --> 
-              <img class="img-responsive" src="images/Jerry pic.png" alt=""> </div>
+              <img class="img-responsive" src="images/jerry2.png" alt=""> </div>
             <!-- Member Details -->
             <h4>Jerry Zhang</h4>
             <!-- Designation --> 
@@ -180,7 +180,7 @@
             <!-- Image Hover Block -->
             <div class="member-img"> 
               <!-- Image  --> 
-              <img class="img-responsive" src="images/photo-2.jpg" alt=""> </div>
+              <img class="img-responsive" src="images/yogi2.jpg" alt=""> </div>
             <!-- Member Details -->
             <h4>Yogi Zhao</h4>
             <!-- Designation --> 
@@ -194,7 +194,7 @@
             <!-- Image Hover Block -->
             <div class="member-img"> 
               <!-- Image  --> 
-              <img class="img-responsive" src="images/photo-3.jpg" alt=""> </div>
+              <img class="img-responsive" src="images/micheal.jpeg" alt=""> </div>
             <!-- Member Details -->
             <h4>Michael Wu</h4>
             <!-- Designation --> 
