--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>Agile Agency Free Bootstrap Web Template</title>
+<title>Game Fortress</title>
+<link rel="icon" type="image/x-icon" href="Favicon.ico">
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -140,8 +141,7 @@
       <div class="area1">
       
         <p>We ensure that games never get boring by recommending ones that fit your taste with detailed, understandable information. Navigate quickly through our site, rid of ads or payments. A rainbow without the rain.</p>
-        <p>Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-          Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+        
           <a href="#" class="btn">Download Apps</a> 
       </div>
       <div class="area2 columns feature-media left"> <img src="images/feature-img-1.png" alt="" width="100%"> </div>
